fix: harden file path validation for path injection alerts
Agent-Logs-Url: https://github.com/carlos-emr/carlos/sessions/31c64980-779f-4e59-826f-c2f725663800

Co-authored-by: yingbull <8680161+yingbull@users.noreply.github.com>